--- a/style.css
+++ b/style.css
@@ -1,7 +1,28 @@
-html, body{
-    padding: 30px;;
+body{
+	background-color: black;
 }
 
-.question{
-    margin-bottom: 25px;
+h1, h2, h3, h4{
+	color: red;
+}
+ 
+h1:hover{
+	color: purple;
+}
+ 
+h2:hover{
+	color: purple;
+}
+
+h3:hover{
+	color: purple;
+}
+
+h4:hover{
+	color: purple;
+}
+
+.label_class{
+	color: yellow;
+	font-weight: 900;
 }
